Bug 49634 - Writer UI: In Navigator selected line shown incorrectly
Summary: Writer UI: In Navigator selected line shown incorrectly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.4 release
Hardware: All All
: medium minor
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.0.0
Keywords:
: 93175 105434 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-05-08 04:31 UTC by sasha.libreoffice
Modified: 2017-10-28 18:22 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of Navigator's selection rectangle (153.16 KB, image/png)
2012-05-08 04:31 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sasha.libreoffice 2012-05-08 04:31:46 UTC
Created attachment 61217 [details]
screenshot of Navigator's selection rectangle

In Writer in Navigator selection of item shown incorrectly if item has subfolders.
In screenshot we see that among Headings we see one on blue background, but dotted rectangle is on wrong place. Size of dotted rectangle always corresponds to size of blue rectangle. But position not always. Often it corresponds (in horizontal dimension) to subitem.

Steps to reproduce:
0. Start Writer, enable Navigator and Stylist panes
1. Enter 2 lines of text
2. Assign "Headings 1" to first line and "Headings 2" to second
3. in Navigator double click first heading (it unfolds)
4. click one time first heading (dotted rectangle becomes on wrong place)
(if unsuccessful, repeat steps 3 and 4 again)

reproduced in 3.3.4 and 3.5.3 on Fedora 64 bit and Windows 7 32 bit
Comment 1 Roman Eisele 2012-05-10 02:57:56 UTC
REPRODUCIBLE with LibreOffice 3.5.3.2 (Build-ID: 235ab8a-3802056-4a8fed3-2d66ea8-e241b80), German langpack installed, on MacOS X 10.6.8 German.

It may be necessary to repeat step 3 and 4 of Sasha's description, but then I see the dotted rectangle at the wrong place, just like on Sasha's screenshot.
Comment 2 retired 2014-05-04 12:54:35 UTC
Maybe I'm missing something here. But this seems to workforme. Please re-open should I be mistaken. Thanks. LO 4.2.3.3 OSX 10.9.2.
Comment 3 Jim Raykowski 2017-09-16 22:55:10 UTC
I confirm this bug still exists in linux version 5.3.3.2 and dev master

I have committed a patch 
https://gerrit.libreoffice.org/#/c/42364/
Comment 4 Commit Notification 2017-09-26 11:56:47 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0b4bf5840e15e56cf5ebcda06fe567cd8ca0034c

tdf#49634 Fix positioning of focus rectangle in Navigator content tree

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Jim Raykowski 2017-10-15 18:20:31 UTC
*** Bug 93175 has been marked as a duplicate of this bug. ***
Comment 6 Xisco Faulí 2017-10-28 18:22:21 UTC
*** Bug 105434 has been marked as a duplicate of this bug. ***