tdf#49634 Fix positioning of focus rectangle in Navigator content tree

https://bugs.documentfoundation.org/show_bug.cgi?id=49634

Change-Id: I3beb41142281b2cda337b457ed287a2cc1f665a6
Reviewed-on: https://gerrit.libreoffice.org/42364
Tested-by: Michael Meeks <michael.meeks@collabora.com>
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>